cmake_minimum_required(VERSION 3.26)
project(cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp main.cpp)

add_executable(prob01 바킹독_알고리즘/기초코드작성요령I/prob01.cpp)
add_executable(prob02 바킹독_알고리즘/기초코드작성요령I/prob02.cpp)
add_executable(prob03 바킹독_알고리즘/기초코드작성요령I/prob03.cpp)
add_executable(prob04 바킹독_알고리즘/기초코드작성요령I/prob04.cpp)
add_executable(1000 바킹독_알고리즘/기초코드작성요령II/1000.cpp)
add_executable(1267 바킹독_알고리즘/기초코드작성요령II/1267.cpp)
add_executable(2309 바킹독_알고리즘/기초코드작성요령II/2309.cpp)
add_executable(2438 바킹독_알고리즘/기초코드작성요령II/2438.cpp)
add_executable(2439 바킹독_알고리즘/기초코드작성요령II/2439.cpp)
add_executable(2440 바킹독_알고리즘/기초코드작성요령II/2440.cpp)
add_executable(2441 바킹독_알고리즘/기초코드작성요령II/2441.cpp)
add_executable(2442 바킹독_알고리즘/기초코드작성요령II/2442.cpp)
add_executable(2443 바킹독_알고리즘/기초코드작성요령II/2443.cpp)
add_executable(2444 바킹독_알고리즘/기초코드작성요령II/2444.cpp)
add_executable(2445 바킹독_알고리즘/기초코드작성요령II/2445.cpp)
add_executable(2446 바킹독_알고리즘/기초코드작성요령II/2446.cpp)
add_executable(2480 바킹독_알고리즘/기초코드작성요령II/2480.cpp)
add_executable(2490 바킹독_알고리즘/기초코드작성요령II/2490.cpp)
add_executable(2557 바킹독_알고리즘/기초코드작성요령II/2557.cpp)
add_executable(2562 바킹독_알고리즘/기초코드작성요령II/2562.cpp)
add_executable(2576 바킹독_알고리즘/기초코드작성요령II/2576.cpp)
add_executable(2587 바킹독_알고리즘/기초코드작성요령II/2587.cpp)
add_executable(2752 바킹독_알고리즘/기초코드작성요령II/2752.cpp)
add_executable(2753 바킹독_알고리즘/기초코드작성요령II/2753.cpp)
add_executable(9498 바킹독_알고리즘/기초코드작성요령II/9498.cpp)
add_executable(10093 바킹독_알고리즘/기초코드작성요령II/10093.cpp)
add_executable(10171 바킹독_알고리즘/기초코드작성요령II/10171.cpp)
add_executable(10804 바킹독_알고리즘/기초코드작성요령II/10804.cpp)
add_executable(10869 바킹독_알고리즘/기초코드작성요령II/10869.cpp)
add_executable(10871 바킹독_알고리즘/기초코드작성요령II/10871.cpp)
add_executable(15552 바킹독_알고리즘/기초코드작성요령II/15552.cpp)
add_executable(1475 바킹독_알고리즘/배열/1475.cpp)
add_executable(1919 바킹독_알고리즘/배열/1919.cpp)
add_executable(2577 바킹독_알고리즘/배열/2577.cpp)
add_executable(3273 바킹독_알고리즘/배열/3273.cpp)
add_executable(3273_2 바킹독_알고리즘/배열/3273_2.cpp)
add_executable(3273_3 바킹독_알고리즘/배열/3273_3.cpp)
add_executable(10807 바킹독_알고리즘/배열/10807.cpp)
add_executable(10808 바킹독_알고리즘/배열/10808.cpp)
add_executable(11328 바킹독_알고리즘/배열/11328.cpp)
add_executable(array_test 바킹독_알고리즘/배열/array_test.cpp)
add_executable(13300 바킹독_알고리즘/배열/13300.cpp)
add_executable(func2 바킹독_알고리즘/배열/func2.cpp)
add_executable(vector_example 바킹독_알고리즘/배열/vector_example.cpp)
add_executable(main main.cpp)