cmake_minimum_required(VERSION 3.26)
project(cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(prob01 바킹독_알고리즘/기초코드작성요령I/prob01.cpp)
add_executable(prob02 바킹독_알고리즘/기초코드작성요령I/prob02.cpp)
add_executable(prob03 바킹독_알고리즘/기초코드작성요령I/prob03.cpp)
add_executable(prob04 바킹독_알고리즘/기초코드작성요령I/prob04.cpp)
add_executable(1000 바킹독_알고리즘/기초코드작성요령II/1000.cpp)
add_executable(1267 바킹독_알고리즘/기초코드작성요령II/1267.cpp)
add_executable(2309 바킹독_알고리즘/기초코드작성요령II/2309.cpp)
add_executable(2438 바킹독_알고리즘/기초코드작성요령II/2438.cpp)
add_executable(2439 바킹독_알고리즘/기초코드작성요령II/2439.cpp)
add_executable(2440 바킹독_알고리즘/기초코드작성요령II/2440.cpp)
add_executable(2441 바킹독_알고리즘/기초코드작성요령II/2441.cpp)
add_executable(2442 바킹독_알고리즘/기초코드작성요령II/2442.cpp)
add_executable(2443 바킹독_알고리즘/기초코드작성요령II/2443.cpp)
add_executable(2444 바킹독_알고리즘/기초코드작성요령II/2444.cpp)
add_executable(2445 바킹독_알고리즘/기초코드작성요령II/2445.cpp)
add_executable(2446 바킹독_알고리즘/기초코드작성요령II/2446.cpp)
add_executable(2480 바킹독_알고리즘/기초코드작성요령II/2480.cpp)
add_executable(2490 바킹독_알고리즘/기초코드작성요령II/2490.cpp)
add_executable(2557 바킹독_알고리즘/기초코드작성요령II/2557.cpp)
add_executable(2562 바킹독_알고리즘/기초코드작성요령II/2562.cpp)
add_executable(2576 바킹독_알고리즘/기초코드작성요령II/2576.cpp)
add_executable(2587 바킹독_알고리즘/기초코드작성요령II/2587.cpp)
add_executable(2752 바킹독_알고리즘/기초코드작성요령II/2752.cpp)
add_executable(2753 바킹독_알고리즘/기초코드작성요령II/2753.cpp)
add_executable(9498 바킹독_알고리즘/기초코드작성요령II/9498.cpp)
add_executable(10093 바킹독_알고리즘/기초코드작성요령II/10093.cpp)
add_executable(10171 바킹독_알고리즘/기초코드작성요령II/10171.cpp)
add_executable(10804 바킹독_알고리즘/기초코드작성요령II/10804.cpp)
add_executable(10869 바킹독_알고리즘/기초코드작성요령II/10869.cpp)
add_executable(10871 바킹독_알고리즘/기초코드작성요령II/10871.cpp)
add_executable(15552 바킹독_알고리즘/기초코드작성요령II/15552.cpp)
add_executable(1475 바킹독_알고리즘/배열/1475.cpp)
add_executable(1919 바킹독_알고리즘/배열/1919.cpp)
add_executable(2577 바킹독_알고리즘/배열/2577.cpp)
add_executable(3273 바킹독_알고리즘/배열/3273.cpp)
add_executable(3273_2 바킹독_알고리즘/배열/3273_2.cpp)
add_executable(3273_3 바킹독_알고리즘/배열/3273_3.cpp)
add_executable(10807 바킹독_알고리즘/배열/10807.cpp)
add_executable(10808 바킹독_알고리즘/배열/10808.cpp)
add_executable(11328 바킹독_알고리즘/배열/11328.cpp)
add_executable(array_test 바킹독_알고리즘/배열/array_test.cpp)
add_executable(13300 바킹독_알고리즘/배열/13300.cpp)
add_executable(func2 바킹독_알고리즘/배열/func2.cpp)
add_executable(vector_example 바킹독_알고리즘/배열/vector_example.cpp)
add_executable(linked_list_test "바킹독_알고리즘/연결 리스트/linked_list_test.cpp")
add_executable(list_example "바킹독_알고리즘/연결 리스트/list_example.cpp")
add_executable(1406 "바킹독_알고리즘/연결 리스트/1406.cpp")
add_executable(1408_list_impl "바킹독_알고리즘/연결 리스트/1408_list_impl.cpp")
add_executable(5397 "바킹독_알고리즘/연결 리스트/5397.cpp")
add_executable(1158 "바킹독_알고리즘/연결 리스트/1158.cpp")
add_executable(1158_1 "바킹독_알고리즘/연결 리스트/1158_1.cpp")
add_executable(1158_2 "바킹독_알고리즘/연결 리스트/1158_2.cpp")
add_executable(1158_3 "바킹독_알고리즘/연결 리스트/1158_3.cpp")
add_executable(stack_test 바킹독_알고리즘/스택/stack_test.cpp)
add_executable(stack_example 바킹독_알고리즘/스택/stack_example.cpp)
add_executable(10828 바킹독_알고리즘/스택/10828.cpp)
add_executable(10828_1 바킹독_알고리즘/스택/10828_1.cpp)
add_executable(10773 바킹독_알고리즘/스택/10773.cpp)
add_executable(1874 바킹독_알고리즘/스택/1874.cpp)
add_executable(2493 바킹독_알고리즘/스택/2493.cpp)
add_executable(6198 바킹독_알고리즘/스택/6198.cpp)
add_executable(17298 바킹독_알고리즘/스택/17298.cpp)
add_executable(3015 바킹독_알고리즘/스택/3015.cpp)
add_executable(6549 바킹독_알고리즘/스택/6549.cpp)
add_executable(1725 바킹독_알고리즘/스택/1725.cpp)
add_executable(queue_test 바킹독_알고리즘/큐/queue_test.cpp)
add_executable(10845 바킹독_알고리즘/큐/10845.cpp)
add_executable(10845_1 바킹독_알고리즘/큐/10845_1.cpp)
add_executable(18258 바킹독_알고리즘/큐/18258.cpp)
add_executable(18258_1 바킹독_알고리즘/큐/18258_1.cpp)
add_executable(2164 백준/2023-11-05/2164.cpp)
add_executable(queue_example 바킹독_알고리즘/큐/queue_example.cpp)
add_executable(deque_test 바킹독_알고리즘/덱/deque_test.cpp)
add_executable(deque_example 바킹독_알고리즘/덱/deque_example.cpp)
add_executable(10866 바킹독_알고리즘/덱/10866.cpp)
add_executable(10866_1 바킹독_알고리즘/덱/10866_1.cpp)
add_executable(1021 바킹독_알고리즘/덱/1021.cpp)
add_executable(5430 바킹독_알고리즘/덱/5430.cpp)
add_executable(11003 바킹독_알고리즘/덱/11003.cpp)
add_executable(4949 "바킹독_알고리즘/스택의 활용(수식의 괄호 쌍)/4949.cpp")
add_executable(3986 "바킹독_알고리즘/스택의 활용(수식의 괄호 쌍)/3986.cpp")
add_executable(9012 백준/2023-11-05/9375.cpp)
add_executable(10799 "바킹독_알고리즘/스택의 활용(수식의 괄호 쌍)/10799.cpp")
add_executable(2504 "바킹독_알고리즘/스택의 활용(수식의 괄호 쌍)/2504.cpp")
add_executable(2504_1 "바킹독_알고리즘/스택의 활용(수식의 괄호 쌍)/2504_1.cpp")
add_executable(1269 백준/2023-11-02/1269.cpp)
add_executable(1302 백준/2023-11-02/1302.cpp)
add_executable(1417 백준/2023-11-02/1417.cpp)
add_executable(1620 백준/2023-11-02/1620.cpp)
add_executable(1655 백준/2023-11-02/1655.cpp)
add_executable(1715 백준/2023-11-02/1715.cpp)
add_executable(1717 백준/2023-11-02/1717.cpp)
add_executable(1764 백준/2023-11-02/1764.cpp)
add_executable(1918 백준/2023-11-02/1918.cpp)
add_executable(1920 백준/2023-11-02/1920.cpp)
add_executable(1920_1 백준/2023-11-02/1920_1.cpp)
add_executable(1927 백준/2023-11-05/1927.cpp)
add_executable(2042 백준/2023-11-05/2042.cpp)
add_executable(2161 백준/2023-11-05/2161.cpp)

add_executable(7785 백준/2023-11-05/7785.cpp)

add_executable(10815 백준/2023-11-05/10815.cpp)
add_executable(10816 백준/2023-11-05/10816.cpp)
add_executable(10815_1 백준/2023-11-05/10815_1.cpp)
add_executable(10816_1 백준/2023-11-05/10816_1.cpp)
add_executable(11279 백준/2023-11-05/11279.cpp)
add_executable(11286 백준/2023-11-05/11286.cpp)
add_executable(11478 백준/2023-11-05/11478.cpp)
add_executable(11866 백준/2023-11-05/11866.cpp)
add_executable(14425 백준/2023-11-05/14425.cpp)
add_executable(17219 백준/2023-11-05/17219.cpp)
add_executable(17413 백준/2023-11-05/17413.cpp)
add_executable(1074 백준/2023-11-06/1074.cpp)
add_executable(swea1238 백준/2023-11-06/swea1238.cpp)
add_executable(1931 백준/2023-11-06/1931.cpp)
add_executable(2630 백준/2023-11-06/2630.cpp)
add_executable(7576 바킹독_알고리즘/BFS/7576.cpp)
add_executable(11659 백준/2023-11-20/11659.cpp)
add_executable(11724 백준/2023-11-20/11724.cpp)
add_executable(11726 백준/2023-11-21/11726.cpp)

add_executable(11726_1 백준/2023-11-21/11726_1.cpp)
add_executable(14940 백준/2023-11-21/14940.cpp)
add_executable(1107 백준/2023-11-22/1107.cpp)
add_executable(1389 백준/2023-11-22/1389.cpp)
add_executable(1926 바킹독_알고리즘/BFS/1926.cpp)
add_executable(2178 바킹독_알고리즘/BFS/2178.cpp)

add_executable(4179 바킹독_알고리즘/BFS/4179.cpp)
add_executable(1697 바킹독_알고리즘/BFS/1697.cpp)
add_executable(1012 바킹독_알고리즘/BFS/1012.cpp)
add_executable(10026 바킹독_알고리즘/BFS/10026.cpp)
add_executable(7569 바킹독_알고리즘/BFS/7569.cpp)
add_executable(7562 바킹독_알고리즘/BFS/7562.cpp)
add_executable(5427 바킹독_알고리즘/BFS/5427.cpp)
add_executable(2583 바킹독_알고리즘/BFS/2583.cpp)
add_executable(2667 바킹독_알고리즘/BFS/2667.cpp)
add_executable(5014 바킹독_알고리즘/BFS/5014.cpp)
add_executable(2468 바킹독_알고리즘/BFS/2468.cpp)
add_executable(6593 바킹독_알고리즘/BFS/6593.cpp)
add_executable(2206 바킹독_알고리즘/BFS/2206.cpp)
add_executable(9466 바킹독_알고리즘/BFS/9466.cpp)
add_executable(2573 바킹독_알고리즘/BFS/2573.cpp)
add_executable(1002 백준/2024-01-07/1002.cpp)
add_executable(1747 백준/2024-01-07/1747.cpp)
add_executable(2621 백준/2024-01-08/2621.cpp)
add_executable(2816 백준/2024-01-08/2816.cpp)
add_executable(2589 백준/2024-01-08/2589.cpp)
add_executable(2146 바킹독_알고리즘/BFS/2146.cpp)
add_executable(13549 바킹독_알고리즘/BFS/13549.cpp)